[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "email_newsletter"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.11.6"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "migrate",
]
